# AI-PCB-Generator

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup_vendor.py
data/templates/: led_circuit.json  voltage_regulator.json
src/: __init__.py  app.py  config.py  vendor.py
src/ai/: client.py  parser.py  prompts.py  schemas.py
src/gui/: ai_copilot.py  component_palette.py  component_panel.py  design_review.py  export_dialog.py  i18n.py  input_panel.py  main_window.py  manufacturing_dialog.py  pcb_view.py  schematic_view.py  settings_dialog.py  simulation_view.py  theme.py  view3d.py
src/models/: model_registry.py  vrml_parser.py
src/pcb/: components.py  dfm.py  exporter.py  generator.py  manufacturing.py  router.py  rules.py
src/simulation/: __init__.py  engine.py  netlist_writer.py  python_solver.py  result_parser.py  results.py  value_parser.py
src/utils/: env_file.py  file_io.py  logger.py  validators.py
test_output/: test.json
tests/: conftest.py  test_dfm.py  test_drc.py  test_env_file.py  test_exporter.py  test_generator.py  test_manufacturing.py  test_netlist_writer.py  test_parser.py  test_router.py  test_schemas.py  test_setup_vendor.py  test_simulation.py
